hphp/hack/test/typecheck/delay_in_sync_function.php.exp
ERROR: File "delay_in_sync_function.php", line 9, characters 3-13:
`delay` can only be used inside `async` functions (NastCheck[3003])
ERROR: File "delay_in_sync_function.php", line 9, characters 3-13:
This expression is of type `Awaitable`, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
  File "delay_in_sync_function.php", line 4, characters 23-36:
  This is why I think it is `Awaitable`
